# OrthogonalPlaneBasedTools

./: CMakeLists.txt  README.md  index.html  index.html~
assets/: state.bib  state.html  state_bib.html
assets/.sass-cache/1b4a6be16a6e35a023dcbff3df09a61afa5da4d1/: main.scssc
assets/.sass-cache/5d78bc2f9bcb660d673545cac801696108c07ed1/: _functions.scssc  _mixins.scssc  _skel.scssc  _vars.scssc
assets/css/: bibbase.css  ie8.css  main.css  main.css~
assets/js/: glob.js  image.js  image.js~  magnify.js  magnify.js~  main.js  package.json
assets/sass/: ie8.scss  main.scss
data/: airway1.vol  airway2.vol  airway3.vol  airway4.vol  coronary.vol  neurite1.vol  neurite2.vol  neurite3.vol  pelvis.vol  synthetic_volume1.vol  synthetic_volume2.vol  synthetic_volume3.vol  synthetic_volume4.vol
examples/: CMakeLists.txt  CMakeLists.txt~
examples/converters/: CMakeLists.txt  CMakeLists.txt~  dicom2vol.cpp  vol2dicom.cpp
examples/vcm/: CMakeLists.txt  CMakeLists.txt~  OrthogonalPlaneEstimation.cpp  OrthogonalPlaneEstimation.cpp~  OrthogonalPlaneEstimationWithCurve.cpp  OrthogonalPlaneEstimationWithCurve.cpp~  PruningSkeletonOrthogonalPlanes.cpp  PruningSkeletonOrthogonalPlanes.cpp~  RecenterSkeletonPoints.cpp  RecenterSkeletonPoints.cpp~  SkeletonOrthogonalPlanes.cpp  SkeletonOrthogonalPlanes.cpp~
src/: ConnectedComponentMerger.h  Modeller.h  ReverseHatPointFunction.h  ShapeDescriptor.h  Threshold.h
src/clustering/: Kmeans.h  Watershed.h
src/geometry/: CurveDecomposition.h  CurveProcessor.h  DigitalPlaneProcessor.h  Distance.h  DistanceToPointFunctor.h  MedialAxis.h  Morphomaths.h  MultiPathThinner.h  PointUtil.h  RosenProffittLengthEstimator.h  SaddleComputer.h  SetProcessor.h  SphericalShellIntersection.h  WeightedPoint.h  WeightedPointCount.h  WeightedPointCountComparator.h
src/graph/: Concatenation.h  Edge.h  LevelConcatenation.h  WeightedEdge.h
src/shapes/: Ball.h  Border.h  Cone.h  DigitalPlane.h  DigitalPlaneSet.h  Ellipse.h  GeodesicBall.h  Polygon.h
src/vcm/: CuttingPlaneEstimator.h  OrthogonalPlaneEstimator.h  PruningOrthogonalPlanes.h  RecenterSkeleton.h  VCMAdjustableRadius.h  VCMOnDigitalSurfaceAdjustableRadius.h
(+15 files in other folders)
